<resources>
    <string name="app_name">To Do List</string>
    <string name="prev"><![CDATA[<-]]></string>
    <string name="next"><![CDATA[->]]></string>
    <string name="strikeThrough"><strike>Cosa da fare in giornata</strike></string>
    <string name="activity">Attività:</string>
    <string name="important">Importante</string>
    <string name="cancel">Annulla</string>
    <string name="add">aggiungi</string>
    <string name="menu_edit">Modifica</string>
    <string name="menu_delete">Elimina</string>
    <string name="todo_activities">Lista attività da fare</string>
    <string name="repeat">Ripeti</string>
</resources>